--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
